--- a/spring-demo/src/main/resources/application.properties
+++ b/spring-demo/src/main/resources/application.properties
@@ -3,8 +3,8 @@
 ###############################################
 database.ip = ${DB_IP:localhost}
 database.port = ${DB_PORT:3306}
-database.user = ${DB_USER:htoh}
-database.password = ${DB_PASSWORD:htoh}
+database.user = ${DB_USER:root}
+database.password = ${DB_PASSWORD:tbpeu669944}
 database.name = ${DB_DBNAME:ds_assignment1}
 
 
@@ -32,4 +32,10 @@ logging.level.ro.tuc=error
 ###############################################
 ### EMBEDDED TOMCAT CONFIGURATIONS ###
 ###############################################
-server.port=${PORT:8080}
+server.port=${PORT:8083}
+
+###############################################
+### RABBITMQ CONFIGURATIONS ###
+###############################################
+spring.profiles.active = usage_message
+tutorial.client.duration = 10000
