--- a/energy-visualization-platform/package.json
+++ b/energy-visualization-platform/package.json
@@ -15,10 +15,13 @@
     "react-chartjs-2": "^4.3.1",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.2",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^2.1.3",
     "reactstrap": "^9.1.4",
+    "sockjs-client": "^1.6.1",
+    "stomp-websocket": "^2.3.4-next",
     "validator": "^13.7.0",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "websocket": "^1.0.34"
   },
   "scripts": {
     "start": "react-scripts start",
