--- a/energy-visualization-platform/package.json
+++ b/energy-visualization-platform/package.json
@@ -19,6 +19,7 @@
     "reactstrap": "^9.1.4",
     "sockjs-client": "^1.6.1",
     "stomp-websocket": "^2.3.4-next",
+    "stompjs": "^2.3.3",
     "validator": "^13.7.0",
     "web-vitals": "^2.1.4",
     "websocket": "^1.0.34"
